# flatipc

./: .gitignore  Cargo.toml  README.md
flatipc-derive/: Cargo.toml
flatipc-derive/src/: lib.rs
src/: lib.rs  string.rs  test.rs  vec.rs
src/backend/: mock.rs
